# attendance

./: .gitignore  LICENSE  attendance.db
app/: analysis_options.yaml  pubspec.yaml
app/lib/: main.dart
app/lib/src/components/: drawer.dart  snack.dart
app/lib/src/modules/breaks/: breaks.dart
app/lib/src/modules/checkins/: checkin.dart
app/lib/src/modules/home/: home.dart
app/lib/src/modules/leaves/: leaves.dart
app/lib/src/modules/profile/: profile.dart
app/lib/src/modules/signing/: signin.dart
app/lib/src/modules/users/: users.dart
app/lib/src/themes/: color_schemes.g.dart
app/lib/src/utils/: constants.dart  enums.dart
core/: Cargo.toml
core/src/: main.rs  run.rs
core/src/db/: config.rs  create_table.rs  drop_table.rs  mod.rs  read.rs  remove.rs  write.rs
core/src/extensions/: vec.rs
core/src/functions/: add_user.rs  checkin_checkout.rs  get_all_checkins.rs  get_all_users.rs  leave.rs  mod.rs  remove_users.rs  root.rs  take_break.rs  update_user.rs
core/src/functions/breaks/: break_off.rs  breaks.rs  get_all_breaks.rs  mod.rs
core/src/functions/entry/: checkin_checkout.rs  get_all_checkins.rs  mod.rs
core/src/functions/leave/: get_all_leaves.rs  mod.rs
core/src/functions/signin/: signin.rs
core/src/functions/users/: add_user.rs  get_user.rs  mod.rs
core/src/models/: breaks.rs  check_in.rs  check_out.rs  entry.rs  error.rs  leave.rs  mod.rs  nested.rs  user.rs  user_details.rs
core/src/routes/: router.rs
core/src/test/: test.rs
core/src/utils/: addr.rs  lock.rs  mod.rs
core/src/utils/constants/: mod.rs  sql_command.rs
(+37 files in other folders)
