[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.7"
tracing-subscriber = "0.3"
jsonwebtoken = "9.2"

tokio = { version = "1.29", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
async-recursion = "1.0"
anyhow = "1.0"

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
